# optiverse

./: .gitignore  CHANGELOG.md  README.md  plan.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: AI_LAYOUT_GENERATION.md  ERROR_HANDLING.md  ERROR_HANDLING_QUICK_REFERENCE.py  LAYER_WIDGET_SYSTEM.md  README.md  _config.yml  index.md
docs/agentic_layout/: cli_and_plugin.md  experiment_protocol.md  experiment_report.md  experiment_results.md  layout_compiler_v1_scope.md  topology_schema_recommendation.md
docs/agentic_layout/prompts/: critic.md  direct-placement.md  topology-intent.md
examples/: agentic_layout_demo.py  marimo_raytrace_demo.py  zemax_parse_simple.py
examples/agentic_benchmarks/: index.json
examples/agentic_benchmarks/four_f_telescope/: explicit_placements.json  goal.json
examples/agentic_benchmarks/hwp_pbs_splitter/: explicit_placements.json  goal.json
examples/agentic_benchmarks/single_lens_focus/: explicit_placements.json  goal.json
examples/agentic_benchmarks/two_mirror_steering/: goal.json
examples/agentic_experiments/: README.md
examples/output/: agentic_hwp_pbs.catalog.json  agentic_hwp_pbs.report.json  agentic_hwp_pbs.scene.json  catalog_summary.json
examples/output/benchmarks/: summary.json
examples/output/experiments/: summary.json
plugins/optiverse-agentic-design/: README.md
plugins/optiverse-agentic-design/.claude-plugin/: plugin.json
plugins/optiverse-agentic-design/.codex-plugin/: plugin.json
src/optiverse/: __init__.py
src/optiverse/agentic/: __init__.py  benchmarks.py  catalog.py  cli.py  compiler.py  experiments.py  goal_parser.py  layout_compiler.py  llm_client.py  render.py  scene_writer.py  schema.py  scorer.py  validator.py
src/optiverse/ai/: CONTEXT.md  __init__.py  assembler.py  catalog.py  cli.py  client.py  generator.py  prompts.py  solver.py  topology.py
src/optiverse/app/: main.py
src/optiverse/cad/: __init__.py  step_preview_dialog.py  step_renderer.py
src/optiverse/core/: color_utils.py  exceptions.py  gaussian_beam.py  interface_definition.py  interface_types.py  layer_tree_state.py  layer_zorder_applier.py  models.py  preferences.py  protocols.py  raytracing_math.py  (+2 more)
tests/: conftest.py  test_ai_solver.py  test_controllers.py  test_extracted_modules.py  test_zemax_simple.py
tests/agentic/: __init__.py  test_benchmarks.py  test_catalog.py  test_cli.py  test_compiler.py  test_experiments.py  test_layout_compiler.py  test_llm_client.py  test_plugin_packaging.py  test_scene_writer.py  test_scorer.py  test_validator.py
tests/cad/: test_step_renderer.py
tests/core/: test_auto_delete_empty_groups.py  test_interface_based_raytracing.py  test_layer_tree_state.py  test_parity_v2_like.py  test_qwp_mirror_double_pass.py  test_refractive_rotation_side.py  test_use_cases.py  test_waveplates.py
tests/examples/: test_ui_best_practices_example.py
tests/export/: test_pyopticl_exporter.py
tests/fixtures/: sample.zmx
tests/integration/: test_adapter.py
tests/objects/: test_beamsplitter_widget.py  test_component_factory.py  test_graphics_view.py  test_image_canvas_svg.py  test_pan_controls.py  test_ruler_text.py
tests/platform/: test_resolve_component_path.py
tests/raytracing/: test_engine.py  test_optical_elements.py
tests/services/: test_collaboration_connection.py  test_collaboration_integration.py  test_collaboration_reconnection.py  test_collaboration_state_sync.py  test_collaboration_sync.py  test_linked_assembly_service.py  test_paths_red.py  test_storage_service.py  test_zemax_converter.py  test_zemax_import.py  test_zemax_parser.py
tests/ui/: test_component_canvas_sync.py  test_component_editor.py  test_component_save_guards.py  test_layer_item_model_generation.py  test_library_workflow.py  test_save_load_assembly.py  test_undo_redo_integration.py
tools/: collaboration_server.py  create_icon.py  generate_dark_icons.py  setup_macos_app.py  test_collaboration.py
tools/generated_icons/: .gitkeep
(+140 files in other folders)
