[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optiverse"
version = "0.3.4"
description = "Optiverse: 2D ray-optics sandbox and component editor (PyQt6, modular)"
readme = "README.md"
requires-python = ">=3.9"  # 3.9-3.12+ fully supported with Numba JIT speedup (Numba 0.60+)
license = { text = "MIT" }
authors = [{ name = "QPG-MIT" }]
dependencies = [
  "PyQt6>=6.5",
  "PyQt6-WebEngine>=6.5",
  "numpy>=1.24",
  "numba>=0.58",  # JIT compilation for 4-8x raytracing speedup (Python 3.9-3.12+ via Numba 0.60+)
  "PyOpenGL>=3.1.10",  # Hardware-accelerated ray rendering
  "websockets>=12.0",
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",  # macOS menu bar app name
]

[project.scripts]
optiverse = "optiverse.app.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "pytest-cov>=4.1",
  "pytest-timeout>=2.3.1",
  "coverage[toml]>=7.4",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/QPG-MIT/optiverse"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["optiverse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
qt_api = "pyqt6"
timeout = 300  # 5 minute timeout per test to prevent hangs in CI

[tool.coverage.run]
branch = true
source = ["src/optiverse"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 30

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "Q", "W"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
pretty = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "OpenGL.*",
    "numba.*",
    "Foundation.*",
    "AppKit.*",
    "optiverse.ui.objects",
    "optiverse.ui.raytracing",
]
ignore_missing_imports = true


